# linkedin-job-scraper

./: .gitignore  README.md  pyproject.toml
examples/: example_run_selenium_grid.py
linkedin_job_scraper/: client.py
linkedin_job_scraper/auth/: login_manager.py
linkedin_job_scraper/jobs/: search_manager.py
linkedin_job_scraper/utils/: constant.py  logger.py
